--- a/STM32F4/SPI_Accelerometer/SPI_Accelerometer.csproj
+++ b/STM32F4/SPI_Accelerometer/SPI_Accelerometer.csproj
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
-    <AssemblyName>SPI_Gyroscope</AssemblyName>
+    <AssemblyName>SPI_Accelerometer</AssemblyName>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SPI_Gyroscope</RootNamespace>
+    <RootNamespace>SPI_Accelerometer</RootNamespace>
     <ProjectTypeGuids>{b69e3092-b931-443c-abe7-7e7b65f2a37f};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2148E919-10BE-4200-ACAD-238345DCE41C}</ProjectGuid>
-    <TargetFrameworkVersion>v4.2</TargetFrameworkVersion>
+    <ProjectGuid>{3AD75F66-5B1F-4D8E-BB7D-FD6C8C21D736}</ProjectGuid>
+    <TargetFrameworkVersion>v4.3</TargetFrameworkVersion>
     <NetMfTargetsBaseDir Condition="'$(NetMfTargetsBaseDir)'==''">$(MSBuildExtensionsPath32)\Microsoft\.NET Micro Framework\</NetMfTargetsBaseDir>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
